28 Sep 2005 mipsator
 * splitted member detection in CHECK_TYPE, now type and member are
   checked separatly.

27 Sep 2005 mipsator
 * polished code builder stuff, now used in check_header, check_lib and
   check_type.

24 Sep 2005 mipsator
 * unbreak the pmkfile.
 * fixed shared library support bug when system is not supported.

03 Sep 2005 mipsator
 * imported primary work on code builder engine.

# snapshot 0.9.3-s2

21 Aug 2005 mipsator
 * replaced stdio.h by pmk_stdio.h.
 * replaced old tests/Makefile.pmk by the one generated by pmkscan
   (removed unneeded targets and install stuff).
 * fixed tests so all compile without warnings.

20 Aug 2005 mipsator
 * replaced old makefile template by the one generated by pmkscan
   (CFLAGS has been modified and added CONFDIR and PRIVSEP_USER).
 * enabled compat tests.
 * updated pmkscan latest changes (polishing).

18 Aug 2005 mipsator
 * added MANDIR and SYSCONFDIR support in pmkscan.
 * tuned pmkcfg.sh to prepare switch from hand made Makefile to
   pmkscan generated Makefile.

17 Aug 2005 mipsator
 * fixed %c conversion in vsnprintf().
 * updated pmkcfg.sh and config.in.pmk in sync with compat.

15 Aug 2005 mipsator
 * updated pmkcfg.sh and config.h.pmk in sync with compat.

12 Aug 2005 mipsator
 * added support for NaN and infinity in vsnprintf().

10 Aug 2005 mipsator
 * added strdup() in compat.
 * fragmented a bit vsnprintf() related functions.

09 Aug 2005 mipsator
 * handle template files in pmkscan.

06 Aug 2005 mipsator
 * added latest work done on pmkscan. The makefile generation is almost
   complete. Some work has to be done on pmkfile generation for the next
   release.

02 Aug 2005 mipsator
 * added da_sort() to sort the content of the dynary.
 * first import of code building functions for further use in pmk.
 * fixed bugs in pathtools.
 * synced pmkcfg.sh and pmkfile with compat.
 * updated pmkscan data.
 * cleaned test sources.

21 Jul 2005 mipsator